fix padding on mobile devices

--- a/src/pages/Chart/Chart.css
+++ b/src/pages/Chart/Chart.css
@@ -336,6 +336,10 @@ label {
 }
 
 @media only screen and (max-width: 700px) {
+
+    .main_layout_chart{
+        padding-bottom: 20px;
+    }
     .popup {
         font-size: medium;
         width: 80%;
