--- a/src/pages/Trade/TradeCharts/TradeChartsComponents/TimeFrame.module.css
+++ b/src/pages/Trade/TradeCharts/TradeChartsComponents/TimeFrame.module.css
@@ -49,6 +49,8 @@
     padding: 2px 8px;
     border-radius: var(--border-radius);
     border: 1px solid var(--dark3);
+    font-size: 12px;
+    
 }
 
 .dropdown_menu {
@@ -86,17 +88,25 @@
     top: 3px;
     opacity: 0;
     pointer-events: none;
-    left: 0;
+    left: 30px;
 }
 
 .dropdown_wrapper_active {
     opacity: 1;
     pointer-events: auto;
-    left: 40px;
+    left: 30px;
+    top: 50px;
 }
 
 .main_time_frame_container button:focus-visible,
 .active_selected_button:focus-visible,
 .non_active_selected_button:focus-visible {
     box-shadow: var(--glow-light-box-shadow);
+}
+
+
+@media only screen and (max-width: 600px){
+
+
+
 }
